--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"@fontsource/fira-mono": "^4.5.10",
 		"@neoconfetti/svelte": "^1.0.0",
 		"@sveltejs/adapter-auto": "^1.0.0",
+		"@sveltejs/adapter-static": "^1.0.5",
 		"@sveltejs/kit": "^1.0.0",
 		"svelte": "^3.54.0",
 		"vite": "^4.0.0"
